@@ -10,7 +10,24 @@
     public class ValueEnvironmentTests
     {
         [TestMethod]
-        public void ShouldSetValue()
+        public void CreateEnvironmentAsNormal()
+        {
+            ValueEnvironment environment = new ValueEnvironment();
+
+            Assert.AreEqual(ValueEnvironmentType.Normal, environment.Type);
+        }
+
+        [TestMethod]
+        public void CreateEnvironmentAsLocal()
+        {
+            ValueEnvironment environment = new ValueEnvironment(ValueEnvironmentType.Local);
+
+            Assert.AreEqual(ValueEnvironmentType.Local, environment.Type);
+            Assert.IsNull(environment.GetNonLocalEnvironment());
+        }
+
+        [TestMethod]
+        public void SetAndGetValue()
         {
             ValueEnvironment environment = new ValueEnvironment();
 
@@ -19,7 +36,7 @@
         }
 
         [TestMethod]
-        public void ShouldGetNullIfNoValue()
+        public void GetNullIfNoValue()
         {
             ValueEnvironment environment = new ValueEnvironment();
 
@@ -27,7 +44,7 @@
         }
 
         [TestMethod]
-        public void ShouldGetValueFromParent()
+        public void GetValueFromParent()
         {
             ValueEnvironment parent = new ValueEnvironment();
             ValueEnvironment environment = new ValueEnvironment(parent);
@@ -38,27 +55,90 @@
         }
 
         [TestMethod]
-        public void ShouldSetAndGetLocalValue()
+        public void SetAndGetPublicValue()
         {
-            ValueEnvironment parent = new ValueEnvironment();
+            ValueEnvironment parent = new ValueEnvironment(ValueEnvironmentType.Public);
             ValueEnvironment environment = new ValueEnvironment(parent);
 
-            environment.SetLocalValue("foo", "bar");
-
-            Assert.AreEqual("bar", environment.GetValue("foo"));
-            Assert.IsNull(parent.GetValue("foo"));
-        }
-
-        [TestMethod]
-        public void ShouldSetAndGetGlobalValue()
-        {
-            ValueEnvironment parent = new ValueEnvironment();
-            ValueEnvironment environment = new ValueEnvironment(parent);
-
-            environment.SetGlobalValue("foo", "bar");
+            environment.SetPublicValue("foo", "bar");
 
             Assert.AreEqual("bar", environment.GetValue("foo"));
             Assert.AreEqual("bar", parent.GetValue("foo"));
+        }
+
+        [TestMethod]
+        [ExpectedException(typeof(InvalidOperationException))]
+        public void RaiseIfNoPublicEnvironmentInSetPublicValue()
+        {
+            ValueEnvironment parent = new ValueEnvironment();
+            ValueEnvironment environment = new ValueEnvironment(parent);
+
+            environment.SetPublicValue("foo", "bar");
+        }
+
+        [TestMethod]
+        public void CreateAndSkipLocalEnvironment()
+        {
+            ValueEnvironment environment = new ValueEnvironment();
+            ValueEnvironment local = new ValueEnvironment(environment, ValueEnvironmentType.Local);
+
+            Assert.AreEqual(ValueEnvironmentType.Normal, environment.Type);
+            Assert.AreEqual(ValueEnvironmentType.Local, local.Type);
+
+            Assert.AreEqual(environment, local.GetNonLocalEnvironment());
+            Assert.AreEqual(environment, environment.GetNonLocalEnvironment());
+        }
+
+        [TestMethod]
+        [ExpectedException(typeof(InvalidOperationException))]
+        public void RaiseIfNoPublicEnvironmentInGetPublicEnvironment()
+        {
+            ValueEnvironment parent = new ValueEnvironment();
+            ValueEnvironment environment = new ValueEnvironment(parent);
+
+            environment.GetPublicEnvironment();
+        }
+
+        [TestMethod]
+        public void GetPublicEnvironment()
+        {
+            ValueEnvironment parent = new ValueEnvironment(ValueEnvironmentType.Public);
+            ValueEnvironment environment = new ValueEnvironment(parent);
+
+            Assert.AreEqual(parent, environment.GetPublicEnvironment());
+            Assert.AreEqual(parent, parent.GetPublicEnvironment());
+        }
+
+        [TestMethod]
+        public void DefineSetAndGetPublicValue()
+        {
+            ValueEnvironment parent = new ValueEnvironment(ValueEnvironmentType.Public);
+            ValueEnvironment environment = new ValueEnvironment(parent);
+
+            environment.SetPublicValue("foo", null);
+
+            environment.SetValue("foo", "bar");
+            environment.SetValue("one", 1);
+
+            Assert.AreEqual("bar", environment.GetValue("foo"));
+            Assert.AreEqual("bar", parent.GetValue("foo"));
+
+            Assert.AreEqual(1, environment.GetValue("one"));
+            Assert.IsNull(parent.GetValue("one"));
+        }
+
+        [TestMethod]
+        public void DefineSetAndGetLocalValue()
+        {
+            ValueEnvironment parent = new ValueEnvironment(ValueEnvironmentType.Public);
+            ValueEnvironment environment = new ValueEnvironment(parent, ValueEnvironmentType.Local);
+
+            environment.SetLocalValue("foo", null);
+
+            environment.SetValue("foo", "bar");
+
+            Assert.AreEqual("bar", environment.GetValue("foo"));
+            Assert.IsNull(parent.GetValue("foo"));
         }
     }
 }
